fixed lecture titles and ordering

--- a/log.tex
+++ b/log.tex
@@ -25,7 +25,7 @@
 \setcounter{tutnum}{1}
 
 \title{Learning Log}
-\author{?}
+\author{Jay Mody}
 \date{\today}
 
 \begin {document}
@@ -53,6 +53,8 @@ Simple introduction to the course. Apparently this Parnas guy is going to appear
 
 Correctness in software is extemely important, as software failures can have catostrophic affects, both financial and social (can even cause loss of life). For example, we briefly mentioned a couple of examples of Software failures in real life, including the infamous Ariane 5 disaster.
 
+\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} Software Quality}
+
 \subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1} Git, Doxygen and A1}
 
 Git is a version controling system for software, which can be very important when you need to find old code. Doxygen is a tool that automatically generates documentation for your code given a specific commenting format.
@@ -75,13 +77,16 @@ Did not review for the midterm.
 
 \subsubsection *{Dates} Jan 13 to Jan 17
 
-\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1}}
+\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} Software Quality}
 
 Solidified the idea of requirements -> design -> implementation -> verification -> maintenance.
 
-\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1}}
+\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} Software Engineering Principles}
+\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} Software Engineering Principles}
 
 Learnt about the various important traits of software (correctness, usability, maintainability, readability, efficiency, etc ...)
+
+
 
 \subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1}}
 
@@ -101,19 +106,21 @@ Did not review for the midterm/final.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section {Week \theweeknum \addtocounter{weeknum}{1} ?}
+\section {Week \theweeknum \addtocounter{weeknum}{1}}
 
 \subsubsection *{Dates} Jan 20 to Jan 24
 
-\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} ?}
+\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} Introduction to Modules}
 
 Wasn't able to attend this lecture due to family circumstances.
 
-\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} ?}
+\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} Math for MIS}
 
-Learned about abstraction via module interface specifications, which is important compenent of effective software design. It allows you to define the "interface"/"actions" of a module, without revealing the inner workings and implementation. All that matters to the user, is what each class/functions does. 
+Learned about abstraction via module interface specifications, which is important compenent of effective software design. It allows you to define the "interface"/"actions" of a module, without revealing the inner workings and implementation. All that matters to the user, is what each class/functions does.
 
-\subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1} ?}
+\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} MIS}
+
+\subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1}}
 
 Reviewed important discrete math concepts relevant to the scope of this course and software engineering as a whole.
 
@@ -131,19 +138,21 @@ Did not review for the midterm of final this week.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section {Week \theweeknum \addtocounter{weeknum}{1} ?}
+\section {Week \theweeknum \addtocounter{weeknum}{1} }
 
 \subsubsection *{Dates} Jan 27 to Jan 31
 
-\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} ?}
+\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} ADTs}
 
 ?
 
-\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} ?}
+\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} Generic MIS}
 
 ?
 
-\subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1} ?}
+\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} OOD}
+
+\subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1} }
 
 ?
 
@@ -153,15 +162,15 @@ Did not review for the midterm of final this week.
 
 \subsubsection *{Assignment Progress}
 
-?
+Briefly reviewed what needed to be done for assignment 2 part 1 to give myself context. Decided against working on it this week/weekend as there were more pressing assignments/midterms to worry about.
 
 \subsubsection *{Midterm/Final Review Progress}
 
-?
+Did not review for the midterm/final this week
 
 \subsubsection *{Reflection Relating Course Topics, Other Courses, Other Experiences}
 
-?
+This week reinforced the importance of Git. We are now also using it in 2XB3, and has been a useful tool for me when I collaborated on a project at DeltaHacks 2020.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
