learning log for week 4

--- a/log.tex
+++ b/log.tex
@@ -120,6 +120,8 @@ Learned about abstraction via module interface specifications, which is importan
 
 \subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} MIS}
 
+Learnt about MIS (module interface specifications). An MIS specifies the external behaviour of a module to a user (someone who interfaces with the module). Implementation details are not specified, just what the inputs are, and what the output should be (as well as the semantics of the module functions/objects/variables).
+
 \subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1}}
 
 Reviewed important discrete math concepts relevant to the scope of this course and software engineering as a whole.
@@ -144,21 +146,23 @@ Did not review for the midterm of final this week.
 
 \subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} ADTs}
 
-?
+Introduction to abstract data types. They are similar to abstract objects. They are implemented using a "template module", and serve as an abstraction for certain semantics ideas (like a x,y,z coordinate, or a circle object). This allows us to organize related information and functions into an ADT. We looked at a couple of examples in class such as the afformentioned CircleADT as well as LineT and DequeCircleModule.
 
 \subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} Generic MIS}
 
-?
+Introduction to generic modules to encompass larger ideas (for examples stacks, queues, lists are generic modules that can be used in place of many different non-generic modules).
 
 \subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} OOD}
 
-\subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1} }
+This lecture introduced us to Object Oriented Design (OOD), and reviewed ideas of interfaces, modules and inheritance in the context of OOD.
 
-?
+\subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1} Review of MIS and Assignment 2}
+
+Did not attend tutorial section.
 
 \subsubsection *{Textbook Reading (Ghezzi, H\&S or other)}
 
-?
+Did not read this textbook section.
 
 \subsubsection *{Assignment Progress}
 
