--- a/A2/report/report.tex
+++ b/A2/report/report.tex
@@ -23,7 +23,7 @@
 
 \maketitle
 
-Introduce report.
+This report outlines the results of implementing a simplified chemical equation balancing program as specified by the provided MIS. The MIS includes a mix of interfaces and modules with generability and modularity in mind. This report will also discuss test results, critiques of the given design specification, and answer questions about software principles/design in general.
 
 \section{Testing of the Original Program}
 
@@ -37,7 +37,7 @@ Introduce report.
 \begin{enumerate}[a)]
 
 \item
-  
+
 \end{enumerate}
 
 \newpage
