title and author

--- a/A3/spec.tex
+++ b/A3/spec.tex
@@ -38,7 +38,8 @@
 \newcommand{\wss}[1]{\authornote{blue}{SS}{#1}}
 
 \title{Assignment 3, Part 1, Specification}
-\author{SFWR ENG 2AA4}
+\author{SFWR ENG 2AA4\\Jay Mody - 400195508 - modyj}
+\date{\today}
 
 \begin {document}
 
