scale should be less than or equal to 0

--- a/A3/spec.tex
+++ b/A3/spec.tex
@@ -294,7 +294,7 @@ $s, scale, nRow, nCol := S, scl, |S|, |S[0]|$
 \hhline{~|-|}
 \multicolumn{1}{r|}{} & \multicolumn{1}{l|}{$exc :=$}\\
 \hhline{|-|-|}
-$scl < 0$ & IllegalArgumentException \\
+$scl \leq 0$ & IllegalArgumentException \\
 \hhline{|-|-|}
 $|S| = 0$ & IllegalArgumentException \\
 \hhline{|-|-|}
